--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -1,19 +1,30 @@
- name: gitartwork from a contribution graph
- on: 
-   push:
-   schedule:
-     - cron: '* */24 * * *'
- jobs:
-   build:
-     name: Make gitartwork SVG
-     runs-on: ubuntu-latest
-     steps:
-       - uses: actions/checkout@v3
-       - uses: jasineri/gitartwork@v1
-         with:
-            # Use this username's contribution graph  
-            user_name: jasineri
-            # Text on contribution graph 
-            text: ARPAN
-       - uses: jasineri/simple-push-action@v1
+name: gitartwork from a contribution graph
+
+on: 
+  push:
+  schedule:
+    - cron: '0 0 * * *'  # This will run the job daily at midnight UTC
+
+jobs:
+  build:
+    name: Make gitartwork SVG
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Node.js 20
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20'
+
+      - name: Generate gitartwork SVG
+        uses: jasineri/gitartwork@v1
+        with:
+          user_name: jasineri
+          text: ARPAN
+
+      - name: Push changes
+        uses: jasineri/simple-push-action@v1
+
           
