--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -18,13 +18,27 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Generate gitartwork SVG
-        uses: jasineri/gitartwork@v1
-        with:
-          user_name: jasineri
-          text: ARPAN
+      - name: Install dependencies
+        run: npm install
+        working-directory: .github/actions/gitartwork
 
-      - name: Push changes
-        uses: jasineri/simple-push-action@v1
+      - name: Generate gitartwork SVG
+        run: node generate-gitartwork.js
+        working-directory: .github/actions/gitartwork
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USER_NAME: jasineri
+          TEXT: ARPAN
+
+      - name: Commit and push changes
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add -A
+          git commit -m 'Update gitartwork SVG'
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
           
