--- a/.github/workflows/gitartwork.yml
+++ b/.github/workflows/gitartwork.yml
@@ -20,13 +20,10 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: .github/actions/gitartwork
 
       - name: Generate gitartwork SVG
-        run: node generate-gitartwork.js
-        working-directory: .github/workflows/gitartwork
+        run: npm run generate
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USER_NAME: jasineri
           TEXT: ARPAN
 
@@ -34,11 +31,8 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add -A
+          git add gitartwork.svg
           git commit -m 'Update gitartwork SVG'
           git push
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-          
